syntax = "proto3";

package io.xpring;

option java_multiple_files = true;
option java_outer_classname = "GetAccountInfoRequestProto";
option java_package = "io.xpring.proto";

// A request to get info about an account.
// Next field: 2
message GetAccountInfoRequest {
  // The address to get info about.
  string address = 1;
}
